force-app/main/default/objects/Plan_Hold__c/Plan_Hold__c.object-meta.xml
<CustomObject>
    <description>Defines hold conditions and release triggers for commission payments within an incentive plan.</description>
    <label>Plan Hold</label>
    <nameField><label>Plan Hold Name</label><type>Text</type></nameField>
    <pluralLabel>Plan Holds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>