force-app/main/default/objects/Plan_Hold__c/fields/Hold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Hold_Pct__c</fullName>
    <label>Hold Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>