force-app/main/default/objects/Plan_Hold__c/fields/Hold_Type__c.field-meta.xml
<CustomField>
    <fullName>Hold_Type__c</fullName>
    <label>Hold Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Collection_Hold</fullName><default>false</default><label>Collection Hold</label></value>
            <value><fullName>Milestone_Hold</fullName><default>false</default><label>Milestone Hold</label></value>
            <value><fullName>Time_Hold</fullName><default>false</default><label>Time Hold</label></value>
            <value><fullName>Approval_Hold</fullName><default>false</default><label>Approval Hold</label></value>
            <value><fullName>Custom</fullName><default>false</default><label>Custom</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>