force-app/main/default/objects/Plan_Hold__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Plan Holds</relationshipLabel>
    <relationshipName>Plan_Holds</relationshipName>
</CustomField>