force-app/main/default/objects/Plan_Hold__c/fields/Release_Days__c.field-meta.xml
<CustomField>
    <fullName>Release_Days__c</fullName>
    <label>Release Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>