force-app/main/default/objects/Plan_Hold__c/fields/Release_Field__c.field-meta.xml
<CustomField>
    <fullName>Release_Field__c</fullName>
    <label>Release Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>