force-app/main/default/objects/Plan_Hold__c/fields/Release_Mode__c.field-meta.xml
<CustomField>
    <fullName>Release_Mode__c</fullName>
    <label>Release Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Binary_At_Threshold</fullName><default>false</default><label>Binary At Threshold</label></value>
            <value><fullName>Proportional</fullName><default>false</default><label>Proportional</label></value>
            <value><fullName>Milestone_Only</fullName><default>false</default><label>Milestone Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>