force-app/main/default/objects/Plan_Hold__c/fields/Release_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>Release_Threshold_Pct__c</fullName>
    <label>Release Threshold Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>