force-app/main/default/objects/Plan_Hold__c/fields/Release_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Release_Trigger__c</fullName>
    <label>Release Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Automatic_On_Collection</fullName><default>false</default><label>Automatic On Collection</label></value>
            <value><fullName>Automatic_On_Date</fullName><default>false</default><label>Automatic On Date</label></value>
            <value><fullName>Automatic_On_Milestone</fullName><default>false</default><label>Automatic On Milestone</label></value>
            <value><fullName>Manual_Admin</fullName><default>false</default><label>Manual Admin</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>